Bug 433148 - Opening pinned app that's a non-distro-provided executable fails with the error message "For security reasons, launching executables is not allowed in this context"
Summary: Opening pinned app that's a non-distro-provided executable fails with the err...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.21.0
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-02-18 09:37 UTC by Riccardo Robecchi
Modified: 2022-09-13 19:19 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Robecchi 2021-02-18 09:37:53 UTC
SUMMARY
After the update to Plasma 5.21 and Frameworks 5.79, launching certain applications returns the error message "For security reasons, launching executables is not allowed in this context". Those applications worked just fine before. In my example, the WordPress application cannot be launched from Latte anymore, while people on Reddit report not being able to open Cafetran Espresso from the panel.

STEPS TO REPRODUCE
1. Try to open an app

OBSERVED RESULT
The app does not open and an error message is returned

EXPECTED RESULT
The app opens.

SOFTWARE/OS VERSIONS
Linux: KDE neon Focal
KDE Plasma Version: 5.21.0
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-02-18 15:37:19 UTC
Getting multiple user reports of this in support channels. Raising priority.

For people experiencing this, what kind of apps are you opening? AppImages? Executables via .desktop files? etc.

And how are they being Launched? From the Task manager? Kickoff? Dolphin? The desktop? etc.

We'll need these kinds of details to triage the issue.
Comment 2 Riccardo Robecchi 2021-02-18 15:40:01 UTC
In my case it's the WordPress app, installed through the official .deb and launched via Latte using a .desktop file. Launching from any other place works fine (Kickoff, panel, Dolphin).
Comment 3 Nate Graham 2021-02-18 17:32:39 UTC
So it works if you launch it from a Task Manager applet on a Plasma Panel, but not on a Task manager applet on a Latte Dock? Or are we talking about Icon applets on the panel/dock?
Comment 4 Riccardo Robecchi 2021-02-18 18:41:53 UTC
(In reply to Nate Graham from comment #3)
> So it works if you launch it from a Task Manager applet on a Plasma Panel,
> but not on a Task manager applet on a Latte Dock? Or are we talking about
> Icon applets on the panel/dock?

I hadn't tried with the Task Manager applet on a Plasma panel because I don't use it. I've just tried it, though, and it's the same as using Latte Dock: it throws the error. If I use an Icon applet it works as expected.
Comment 5 Nate Graham 2021-02-18 19:01:32 UTC
Thanks.
Comment 6 Riccardo Robecchi 2021-02-18 19:04:18 UTC
I see that you changed the title, but I'm not entirely sure that the provenance is what makes a difference. I also use Bluegriffon, Steam, ZenKit To Do and Waterfox, all manually installed through a .deb file, and they all work fine.
Comment 7 Nate Graham 2021-02-18 19:17:33 UTC
Exactly, those are all non-distro-provided executables. :)
Comment 8 Bug Janitor Service 2021-02-18 20:34:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/656
Comment 9 Alexander Lohnau 2021-02-18 21:32:40 UTC
Git commit 83f9c9c45be2388bfebbf75d6644b34a513d612a by Alexander Lohnau.
Committed on 18/02/2021 at 20:32.
Pushed by alex into branch 'master'.

libtaskmanager: Allow to launch executables

I stumbled upon this when pinning qdbus viewer
and it seems to be the same issue that many people have.
FIXED-IN: 5.21.1

M  +1    -0    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/83f9c9c45be2388bfebbf75d6644b34a513d612a
Comment 10 Alexander Lohnau 2021-02-18 21:34:52 UTC
Git commit 849cb67fcf8ff928074e5a0719efcbd90b11a75d by Alexander Lohnau.
Committed on 18/02/2021 at 21:33.
Pushed by alex into branch 'Plasma/5.21'.

libtaskmanager: Allow to launch executables

I stumbled upon this when pinning qdbus viewer
and it seems to be the same issue that many people have.
FIXED-IN: 5.21.1

M  +1    -0    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/849cb67fcf8ff928074e5a0719efcbd90b11a75d
Comment 11 Ilya Bizyaev 2021-02-19 07:34:05 UTC
It seems there's the same bug with app shortcuts that were dragged onto the desktop
Comment 12 Nate Graham 2021-02-19 15:22:10 UTC
Probably needs the same fix as here. Can you file a new bug report for that? Thanks!
Comment 13 Archisman Panigrahi 2021-02-19 18:01:13 UTC
Similar issue happens for xournalpp 1.1.0+dev version (https://github.com/xournalpp/xournalpp/)

After upgrading to Plasma 5.21 (in KDE Neon User Edition), the application fails to launch from Latte Dock, showing the error "For security reasons, launching executables is not allowed in this context".

Also, when I open the .desktop file, the xournalpp does open. However, the icon in Latte is different from what is shown in the .desktop file.
Comment 14 Nate Graham 2021-02-19 20:02:39 UTC
This fix may also fix it in Latte Dock automatically, if it uses the Task Manager library.
Comment 15 Jarrard 2022-01-24 06:57:14 UTC
For some reason I still have this issue with Krunner and trying to execute a .EXE file.  Works in Dolphin however just fine if right click select wine to run exe is used. If I double click on the exe it says security reason etc...

I do have latte but doesn't explain dolphin not allowing double click on exe. (default app is set to wine)
Comment 16 Nate Graham 2022-09-13 19:19:57 UTC
That's a different issue which is already fixed in Plasma 5.26.