libtaskmanager: Allow to launch executables

I stumbled upon this when pinning qdbus viewer
and it seems to be the same issue that many people have.

BUG: 433148
FIXED-IN: 5.21.1